[package]
name = "rat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.153", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
serde_json = "1.0.94"
chrono = { version = "0.4.24", features = ["serde"]}
dotenvy = "0.15.7"
base64 = "0.21.0"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["macros", "parking_lot"] }