[package]
name = "hat"
version = "0.1.2"
edition = "2021"
authors = ["Isaac Adams <isaac.d.adams@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "run HTTP tests"
readme = "README.md"
homepage = "https://github.com/isaacadams/hat"
repository = "https://github.com/isaacadams/hat"
keywords = ["cli", "REST", "test"]
categories = ["command-line-utilities"]

[[bin]]
name = "hat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14", features = ["blocking", "json"] }
serde = { version = "1.0.153", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
serde_json = "1.0.94"
chrono = { version = "0.4.24", features = ["serde"]}
dotenvy = "0.15.7"
thiserror = "1.0.40"
regex = "1.8.4"
evalexpr = "11.0.0"
clap = { version = "4.3.3", features = ["derive"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
lazy_static = "1.4.0"
toml = "0.7.4"
gjson = "0.8.1"
env_logger = "0.10.0"
json = "0.12.4"


[dev-dependencies]
jaq-core = "0.10.0"

[target.'cfg(target_os = "linux")'.dependencies]
openssl-sys = { version = "0.9.90", features = ["vendored"]}
