[package]
name = "hat"
version = "0.2.0"
edition = "2021"
authors = ["Isaac Adams <isaac.d.adams@gmail.com>"]
license = "MIT OR Apache-2.0"
description = """
hat runs HTTP tests based on a toml configuration file.

The configured tests can check response status, heeaders, and body
using binary operations such as ==, >, <, !=, etc.

If one or more tests fail, hat will return a failed exit code.

Use --help for more USAGE details.

Project homepage: https://github.com/isaacadams/hat
"""
readme = "README.md"
homepage = "https://github.com/isaacadams/hat"
repository = "https://github.com/isaacadams/hat"
keywords = ["cli", "REST", "test"]
categories = ["command-line-utilities"]

[[bin]]
name = "hat"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.153", features = ["derive"] }
log = "0.4.17"
simplelog = "0.12.0"
serde_json = "1.0.94"
dotenvy = "0.15.7"
thiserror = "1.0.40"
regex = "1.8.4"
evalexpr = "11.0.0"
clap = { version = "4.3.3", features = ["derive"] }
anyhow = { version = "1.0.71", features = ["backtrace"] }
lazy_static = "1.4.0"
toml = "0.7.4"
gjson = "0.8.1"
env_logger = "0.10.0"
json = "0.12.4"
ureq = "2.6.2"
url = "2.4.0"
http = "0.2.9"

[dev-dependencies]
jaq-core = "0.10.0"
trycmd = "0.14.16"

# optimized to minimize binary size: https://github.com/johnthagen/min-sized-rust 
[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
